fixing contrast issue on button

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -212,7 +212,7 @@ main {
   font-weight: bold;
   margin-left: 1.1rem;
   width: 120px;
-  background-color: #0000FF;
+  background-color: #003366;
   color: #fff;
   border-radius: 5px;
   height: 40px;
@@ -220,9 +220,8 @@ main {
 }
 
 #owntoday:hover {
-  background-color: rgba(0, 0, 255, 0.9)
-;
-}
+  background-color: rgba(0, 0, 153, 0.9);
+} 
   
 
 
